connect ws to waiter and receive ready order items

--- a/src/components/clientStyles.css
+++ b/src/components/clientStyles.css
@@ -11,3 +11,9 @@
 .clientPropsListItem {
     text-align: left;
 }
+.tableWithFoodDiv {
+    border: dotted 2px black;
+    margin: 5px;
+    padding: 5px;
+    background-color: darkgray;
+}
