--- a/src/components/clientStyles.css
+++ b/src/components/clientStyles.css
@@ -3,7 +3,9 @@
     background-color: antiquewhite;
     border-radius: 5px;
     min-height: 10em;
-    min-width: 10em;
+    min-width: 27em;
+    padding: 1em;
+    margin-top: 1em;
 }
 .clientPropsList {
     text-align: left;
