--- a/src/style.css
+++ b/src/style.css
@@ -81,17 +81,17 @@ section {
 	}
 }
 
-.myDiv, .myDivGreen, .myDivYellow, .myDivBlue {
-	margin: 3em;
-	min-width: 10em;
-	border: solid 1px black;
-}
-.myDivGreen {
-	background-color: green;
-}
-.myDivYellow {
-	background-color: #b7b336;
-}
-.myDivBlue {
-	background-color: #1f5caf;
-}
+/*.myDiv, .myDivGreen, .myDivYellow, .myDivBlue {*/
+/*	margin: 3em;*/
+/*	min-width: 10em;*/
+/*	border: solid 1px black;*/
+/*}*/
+/*.myDivGreen {*/
+/*	background-color: green;*/
+/*}*/
+/*.myDivYellow {*/
+/*	background-color: #b7b336;*/
+/*}*/
+/*.myDivBlue {*/
+/*	background-color: #1f5caf;*/
+/*}*/
